<resources>
    <string name="app_name">Naeun-Android</string>

    <!-- Login activity-->
    <string name="main_slogan">\'더 나은 나를 위해\'</string>
    <string name="app_description">나에게 딱 맞는 화장품을 찾아보세요</string>
    <string name="simple_login">간편로그인</string>
    <string name="contact_team">문의하기</string>
    <string name="confirm_terms">약관확인</string>

    <!-- Set nickname activity -->
    <string name="nickname_setting_description">선택한 소셜 계정으로\n가입을 진행합니다.</string>
    <string name="nickname">닉네임</string>
    <string name="nickname_hint">한글/영어 최대 7자 이내</string>
    <string name="duplication_check">중복확인</string>
    <string name="input_done">입력완료</string>

    <!-- Select Skin Type -->
    <string name="skin_type_Q_1">1. 유수분 밸런스</string>
    <string name="skin_type_D">D</string>
    <string name="skin_type_D_desc">건성 피부</string>
    <string name="skin_type_O">O</string>
    <string name="skin_type_O_desc">지성 피부</string>
    <string name="skin_type_Q_2">2. 피부 민감도</string>
    <string name="skin_type_S">S</string>
    <string name="skin_type_S_desc">민감성 피부</string>
    <string name="skin_type_R">R</string>
    <string name="skin_type_R_desc">저항있는 피부</string>
    <string name="skin_type_Q_3">3. 멜라닌 활성도</string>
    <string name="skin_type_P">P</string>
    <string name="skin_type_P_desc">색소침착 피부</string>
    <string name="skin_type_N">N</string>
    <string name="skin_type_N_desc">균일한 피부</string>
    <string name="skin_type_Q_4">4. 피부 탄력도</string>
    <string name="skin_type_W">W</string>
    <string name="skin_type_W_desc">탄력없는 피부</string>
    <string name="skin_type_T">T</string>
    <string name="skin_type_T_desc">탄력있는 피부</string>
    <string name="skin_type_difficult_title">질문지로 선택 시\n정확한 피부타입 검사 결과를 받을 수 있어요</string>
    <string name="skin_type_difficult_desc">소요시간: 약 5분</string>
    <string name="skin_type_title">00님의\n피부타입을\n선택해주세요.</string>
    <string name="delete">삭제하기</string>
    <string name="go_question">"질문지로 선택 바로가기"</string>

</resources>