<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.LoginActivity">

        <ImageView
            android:id="@+id/iv_main_logo"
            android:layout_width="163dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_logo_mint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_simple_login" />

        <TextView
            android:id="@+id/tv_main_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:letterSpacing="0.1"
            android:text="@string/main_slogan"
            android:textColor="@color/gray70"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_main_logo" />

        <TextView
            android:id="@+id/tv_app_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:letterSpacing="0.1"
            android:text="@string/app_description"
            android:textColor="@color/gray88"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_main_slogan" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="34dp"
            android:background="@color/gray20"
            app:layout_constraintBottom_toTopOf="@id/btn_kakao_login"
            app:layout_constraintEnd_toStartOf="@id/tv_simple_login"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_simple_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:letterSpacing="0.1"
            android:text="@string/simple_login"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/btn_kakao_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="34dp"
            android:background="@color/gray20"
            app:layout_constraintBottom_toTopOf="@id/btn_kakao_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_simple_login" />

        <ImageView
            android:id="@+id/btn_kakao_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="22dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/img_kakao_login_medium_wide"
            app:layout_constraintBottom_toTopOf="@id/view_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="54dp"
            android:letterSpacing="0.1"
            android:text="@string/contact_team"
            android:textColor="@color/gray30"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/view_vertical"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/view_vertical"
            android:layout_width="1dp"
            android:layout_height="28dp"
            android:layout_marginBottom="48dp"
            android:background="@color/gray20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_confirm_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="54dp"
            android:letterSpacing="0.1"
            android:text="@string/confirm_terms"
            android:textColor="@color/gray30"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/view_vertical" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>